force-app/main/default/objects/QCC_EFTRecoveryPaymentProcessStatus__mdt/QCC_EFTRecoveryPaymentProcessStatus__mdt.object-meta.xml
<CustomObject>
    <label>QCC_EFTRecoveryPaymentProcessStatus</label>
    <pluralLabel>QCC_EFTRecoveryPaymentProcessStatus</pluralLabel>
</CustomObject>