force-app/main/default/objects/QCC_EFTRecoveryPaymentProcessStatus__mdt/fields/Current_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Process_Status__c</fullName>
    <label>Current Process Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>