force-app/main/default/objects/QCC_EFTRecoveryPaymentProcessStatus__mdt/fields/Mapped_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Process_Status__c</fullName>
    <label>Mapped Process Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>