force-app/main/default/objects/QCC_EFTRecoveryPaymentProcessStatus__mdt/fields/Next_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Process_Status__c</fullName>
    <label>Next Process Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>